fix: 兼容有些21jdk getFirst 会找不到符合的错误 兼容有些21jdk getFirst 会找不到符合的错误